A stack of changes, large and small
Fiddling with getting /news/ going. WIP.

Add a bit of content on some pages.

Edit content on others.

Trying (and failing) not to get distracted by layout yet.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,8 +41,8 @@
               </li>
               {% if site.blog_nav_title %}
               <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
+              <li class="nav-item {% if page.url contains 'news' %}active{% endif %}">
+                <a class="nav-link" href="{{ '/news/' | relative_url }}">{{ site.blog_nav_title }}
                   {%- if page.url contains 'blog' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
