--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -18,7 +18,7 @@
     {%- else -%}
         {%- capture title -%}{{ site.title }}{%- endcapture -%}
     {%- endif -%}
-    {% if page.url == '/blog/index.html' %}
+    {% if page.url == '/news/index.html' %}
         {{ site.blog_nav_title }} | {{ title }}
     {%- elsif page.title != "blank" and page.url != "/" -%}
         {{ page.title }} | {{ title }}
